# diamond-parser

./: .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  Makefile  README.md  app_config.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  settings.json
archive/: file_manager.py  settings_old.json  try.py  wip.py
config/: app_config.py  app_config2.py
core/: app_config.py  file_manager.py
data/staging/: e1.txt
docs/: app_config_explained.md  workflow_precommits.md
planning/: oop-guide.md  order_of_creating.md  planner.md  planner2.md
tests/: test_app_config.py  test_file_manager.py
