[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 115
target-version = ["py313"]
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | __pycache__
  | tests/fixtures
  | archive
)/
'''

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 115
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
exclude = ["^archive/"]

[project]
name = "diamond-parser"
version = "0.1.0"
description = "A Python application for parsing and managing baseball data."
authors = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.13"


[tool.pytest.ini_options]
pythonpath = "."
